fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ html {
     font-family: 'Open Sans', sans-serif !important;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 nav {
     box-shadow: 0px -72px 27px 68px rgba(0, 0, 0, 0.35);
 }
